# mc-homology

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/workflows/: cmake-single-platform.yml
algebra/: CMakeLists.txt
algebra/include/: algebraic_concepts.h  chain_complex.h  integer.h  matrix.h  matrix_algorithms.h  modulo_fields.h  number_theory.h  z2_field.h
algebra/include/detail/: matrix_utils.h
algebra/src/: integer.cpp
algebra/tests/: CMakeLists.txt  algebraic_concepts_test.cpp  chain_complex_test.cpp  integer_test.cpp  matrix_algorithms_test.cpp  matrix_test.cpp  modulo_fields_test.cpp  number_theory_test.cpp  z2_field_test.cpp
cmake/: InstallLib.cmake
complexes/: CMakeLists.txt
complexes/include/: cubical_complex.h  utils.h
complexes/src/: cubical_complex.cpp  utils.cpp
complexes/tests/: CMakeLists.txt  cubical_complex_test.cpp
core/: CMakeLists.txt
core/include/: complex.h  cubical_complex.h  homology.h  utils.h
core/src/: cubical_complex.cpp  utils.cpp
core/tests/: CMakeLists.txt  cubical_complex_test.cpp
docs/html/: algebra__homology_8h.html  algebra__homology_8h.js  algebra__homology_8h__dep__incl.map  algebra__homology_8h__dep__incl.md5  algebra__homology_8h__incl.map  algebra__homology_8h__incl.md5  algebra__homology_8h_source.html  algebraic__concepts_8h.html  algebraic__concepts_8h.js  algebraic__concepts_8h__dep__incl.map  algebraic__concepts_8h__dep__incl.md5  algebraic__concepts_8h__incl.map  algebraic__concepts_8h__incl.md5  algebraic__concepts_8h_source.html  annotated.html  annotated_dup.js  chain__complex_8h.html  chain__complex_8h.js  chain__complex_8h__dep__incl.map  chain__complex_8h__dep__incl.md5  chain__complex_8h__incl.map  chain__complex_8h__incl.md5  chain__complex_8h_source.html  classalgebra_1_1ChainComplex-members.html  classalgebra_1_1ChainComplex.html  classalgebra_1_1ChainComplex.js  classalgebra_1_1ChainComplex__coll__graph.map  classalgebra_1_1ChainComplex__coll__graph.md5  classalgebra_1_1Integer-members.html  classalgebra_1_1Integer.html  classalgebra_1_1Integer.js  classalgebra_1_1Integer__coll__graph.map  classalgebra_1_1Integer__coll__graph.md5  classalgebra_1_1Matrix-members.html  classalgebra_1_1Matrix.html  classalgebra_1_1Matrix.js  classalgebra_1_1Matrix__coll__graph.map  classalgebra_1_1Matrix__coll__graph.md5  classalgebra_1_1ZModP-members.html  classalgebra_1_1ZModP.html  (+546 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  (+64 more)
docs/latex/: algebra__homology_8h.tex  algebra__homology_8h__dep__incl.md5  algebra__homology_8h__incl.md5  algebra__homology_8h_source.tex  algebraic__concepts_8h.tex  algebraic__concepts_8h__dep__incl.md5  algebraic__concepts_8h__incl.md5  algebraic__concepts_8h_source.tex  annotated.tex  chain__complex_8h.tex  chain__complex_8h__dep__incl.md5  chain__complex_8h__incl.md5  chain__complex_8h_source.tex  classalgebra_1_1ChainComplex.tex  classalgebra_1_1ChainComplex__coll__graph.md5  classalgebra_1_1Integer.tex  classalgebra_1_1Integer__coll__graph.md5  classalgebra_1_1Matrix.tex  classalgebra_1_1Matrix__coll__graph.md5  classalgebra_1_1ZModP.tex  classalgebra_1_1ZModP_3_012_01_4.tex  classalgebra_1_1ZModP_3_012_01_4__inherit__graph.md5  classalgebra_1_1ZModP__coll__graph.md5  classalgebra_1_1ZModP__inherit__graph.md5  classcomplexes_1_1BasicInterval.tex  classcomplexes_1_1CubicalComplex.tex  classcomplexes_1_1CubicalComplex__coll__graph.md5  classcomplexes_1_1CubicalSimplex.tex  classcomplexes_1_1CubicalSimplex__coll__graph.md5  classcore_1_1AlgebraHomology.tex  classcore_1_1AlgebraHomology__coll__graph.md5  classcore_1_1AlgebraHomology__inherit__graph.md5  classcore_1_1CommandlineOptions.tex  classcore_1_1CommandlineOptions__coll__graph.md5  classcore_1_1CommandlineOptions__inherit__graph.md5  classcore_1_1Complex.tex  classcore_1_1Complex__coll__graph.md5  classcore_1_1Complex__inherit__graph.md5  classcore_1_1CubicalComplex3D.tex  classcore_1_1CubicalComplex3D__coll__graph.md5  (+198 more)
examples/: README.md
homology/: CMakeLists.txt
homology/include/: chain_complex.h
mc-homology/: CMakeLists.txt
mc-homology/algebra/: CMakeLists.txt
mc-homology/algebra/cmake/: algebraConfig.cmake
mc-homology/algebra/include/algebra/: algebraic_concepts.h  chain_complex.h  integer.h  matrix.h  matrix_algorithms.h  modulo_fields.h  number_theory.h  z2_field.h
mc-homology/algebra/include/algebra/detail/: matrix_utils.h
mc-homology/algebra/tests/: CMakeLists.txt  algebraic_concepts_test.cpp  chain_complex_test.cpp  integer_test.cpp  matrix_algorithms_test.cpp  matrix_test.cpp  modulo_fields_test.cpp  number_theory_test.cpp  z2_field_test.cpp
mc-homology/complexes/: CMakeLists.txt
mc-homology/complexes/include/complexes/: compute_chain_complex.h  cubical_complex.h
mc-homology/complexes/src/: cubical_complex.cpp  utils.cpp
mc-homology/complexes/tests/: CMakeLists.txt  compute_chain_complex_test.cpp  cubical_complex_test.cpp
mc-homology/core/: CMakeLists.txt
mc-homology/core/cmake/: coreConfig.cmake
mc-homology/core/include/core/: algebra_homology.h  complex.h  cubical_complex_3d.h  homology.h  homology_printing_strategy.h  latex_wrapper.h  manager.h  options.h  parser.h  polymorphic.h  text_drawable.h
mc-homology/core/src/: complex.cpp  cubical_complex_3d.cpp  homology.cpp  homology_printing_strategy.cpp  latex_wrapper.cpp  manager.cpp  options.cpp  parser.cpp  text_drawable.cpp
mc-homology/core/tests/: CMakeLists.txt  polymorphic_test.cpp  test_test.cpp
mc-homology/parsers/: CMakeLists.txt
mc-homology/src/: main.cpp
mc-homology/tests/: CMakeLists.txt  test.cpp
src/: helloworld.cpp  main.cpp
(+8 files in other folders)
